# ssoty

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-ko.md  README.md  RELEASING.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
adapters/claude-code/skills/ssoty/: SKILL.md
adapters/claude-code/skills/ssoty/scripts/: run.sh
adapters/codex/skills/ssoty/: SKILL.md
adapters/codex/skills/ssoty/scripts/: run.sh
benchmarks/: REPORT.md
docs/: PROMO.md  RFC.md
examples/: ssoty.json
examples/clean-setup/: .ssotyignore
examples/clean-setup/.claude/: CLAUDE.md
examples/clean-setup/.claude/rules/: meta-layout.md  shared-style.md  team-rules.md
examples/clean-setup/.codex/: AGENTS.md
examples/messy-setup/: .ssotyignore
examples/messy-setup/.claude/: CLAUDE.md
examples/messy-setup/.claude/rules/: broken-link.md  meta-layout.md  shared-style.md
examples/messy-setup/.codex/: AGENTS.md
scripts/: pii_gate.sh
src/ssoty/: __init__.py  __main__.py  checks.py  cli.py  diff.py  fix.py  ignore.py  metrics.py  models.py  redact.py  report.py  resolver.py  sync.py  tokens.py
tests/: test_ssoty.py
